manifests/mtls/mtls-strict.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mtls-strict
  namespace: ordendev
spec:
  mtls:
    mode: STRICT
