manifests/mtls/ms-appointment-dr-mtls.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ms-appointments
  namespace: ordendev
spec:
  host: ms-appointments
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
