manifests/mtls/ms-patients-dr-mtls.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ms-patients
  namespace: ordendev
spec:
  host: ms-patients
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
